# qt-practices

./: .gitignore  README.md
beginners/: .gitignore
beginners/age-calculator/: CMakeLists.txt  agecalc.cpp  agecalc.h  main.cpp
beginners/casting/: CMakeLists.txt  main.cpp
beginners/disconnecting/: CMakeLists.txt  main.cpp  radio.cpp  radio.h  station.cpp  station.h
beginners/dog/: CMakeLists.txt  dog.cpp  dog.h  main.cpp  owner.cpp  owner.h
beginners/dynamic-cast/: CMakeLists.txt  main.cpp
beginners/hello-world/: CMakeLists.txt  main.cpp
beginners/qdate-time-datetime/: CMakeLists.txt  main.cpp
beginners/qint-types/: CMakeLists.txt  main.cpp
beginners/qobject/: CMakeLists.txt  cat.cpp  cat.h  dog.cpp  dog.h  main.cpp
beginners/qobject-cast/: CMakeLists.txt  main.cpp  sohn.cpp  sohn.h  vater.cpp  vater.h
beginners/qproperty/: CMakeLists.txt  main.cpp  test.cpp  test.h  watcher.cpp  watcher.h
beginners/qstring/: CMakeLists.txt  main.cpp
beginners/qtimer/: CMakeLists.txt  main.cpp  test.cpp  test.h
